[package]
name = "eat"
version = "0.1.0"
edition = "2021"
authors = ["Victor Schappert <victor.schappert@protonmail.com>"]
description = "Consume JSON at blazing speed"
repository = "https://github.com/vcschapp/eat"
license = "MIT"
keywords = [
    "fast",
    "json",
    "lexer",
    "lexical",
    "lightweight",
    "minimal",
    "minimalist",
    "parser",
    "stream",
    "streaming",
    "syntax",
    "token",
    "tokenizer",
]

[dependencies]
